--- a/app/src/main/res/layout/activity_yaz_okulu.xml
+++ b/app/src/main/res/layout/activity_yaz_okulu.xml
@@ -92,7 +92,7 @@
             android:gravity="center"
             android:text="Yaz Okulu Başlama-Bitiş Tarihleri "
             android:textColor="@color/black"
-            android:textSize="18dp"></TextView>
+            android:textSize="20dp"></TextView>
 
         <LinearLayout
             android:id="@+id/yazOkulu_linearLayoutDateBetween"
@@ -103,54 +103,38 @@
             android:padding="15dp">
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="140dp"
+            <TextView
+                android:id="@+id/editYazOkuluSchoolDateStart"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                app:boxCornerRadiusBottomEnd="20dp"
-                app:boxCornerRadiusTopStart="20dp"
-                app:boxStrokeColor="@color/kou_green"
-                app:endIconMode="clear_text"
-                app:helperTextTextColor="@color/red_helper">
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="10dp"
+                android:backgroundTint="@color/black"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Başlangıç"
+                android:inputType="date"
+                android:minHeight="48dp"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                tools:ignore="SpeakableTextPresentCheck" />
 
-                <EditText
-                    android:id="@+id/editYazOkuluSchoolDateStart"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/black"
-                    android:ems="10"
-                    android:hint="Başlangıç"
-                    android:inputType="date"
-                    android:minHeight="48dp"
-                    tools:ignore="SpeakableTextPresentCheck" />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="140dp"
+            <TextView
+                android:id="@+id/editYazOkuluSchoolDateFinish"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                app:boxCornerRadiusBottomEnd="20dp"
-                app:boxCornerRadiusTopStart="20dp"
-                app:boxStrokeColor="@color/kou_green"
-                app:endIconMode="clear_text"
-                app:helperTextTextColor="@color/red_helper">
-
-                <EditText
-                    android:id="@+id/editYazOkuluSchoolDateFinish"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/black"
-                    android:ems="10"
-                    android:hint="Bitiş"
-                    android:inputType="date"
-                    android:minHeight="48dp"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="40dp"
+                android:backgroundTint="@color/black"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Bitiş"
+                android:inputType="date"
+                android:minHeight="48dp"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                tools:ignore="SpeakableTextPresentCheck" />
 
 
         </LinearLayout>
@@ -164,7 +148,7 @@
             android:text="Sorumlu Olunan Ders/Dersler"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18dp"></TextView>
+            android:textSize="20dp"></TextView>
 
 
         <!--1.ders sorumlu-->
@@ -314,7 +298,7 @@
             android:text="Yaz Okulunda Alınacak Ders/Dersler"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18dp"></TextView>
+            android:textSize="20dp"></TextView>
 
         <!--1.ders sorumlu-->
 
@@ -485,8 +469,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:layout_marginTop="30dp"
-            android:text="Pdf Olustur"
             android:onClick="createPdf"
+            android:text="Pdf Olustur"
             android:textSize="16dp" />
 
     </LinearLayout>
